--- a/src/Components/Expenses/ExpenseItem.css
+++ b/src/Components/Expenses/ExpenseItem.css
@@ -6,7 +6,7 @@
   padding: 0.5rem;
   margin: 1rem 0;
   border-radius: 12px;
-  background-color: #e9e2ef;
+  background-color: #fff;
 }
 
 .expense-item__description {
