--- a/src/Components/Expenses/ExpenseItem.css
+++ b/src/Components/Expenses/ExpenseItem.css
@@ -2,11 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   padding: 0.5rem;
   margin: 1rem 0;
-  border-radius: 12px;
-  background-color: #fff;
+  background-color: #4b4b4b;
 }
 
 .expense-item__description {
@@ -24,14 +22,14 @@
   font-size: 1rem;
   flex: 1;
   margin: 0 1rem;
-  color: black;
+  color: white;
 }
 
 .expense-item__price {
   font-size: 1rem;
   font-weight: bold;
   color: white;
-  background-color: #a892ee;
+  background-color: #40005d;
   border: 1px solid white;
   padding: 0.5rem;
   border-radius: 12px;
